# SO1_P2_202300539

./: README.md
Proyecto2/Documentacion/: Manuel Tecnico.md
Proyecto2/black-friday/: .gitignore  docker-compose.yml  locustfile.py  patch-registry.yaml  valkey-kubevirt.yaml  valkey-manual.yaml  zot-config.json
Proyecto2/black-friday/go-bridge/: Dockerfile  go.mod  go.sum  main.go
Proyecto2/black-friday/go-bridge/pb/: producto_venta_grpc.pb.go
Proyecto2/black-friday/go-consumer/: Dockerfile  go.mod  go.sum  main.go
Proyecto2/black-friday/go-grcp-writer/: go.sum  main.go
Proyecto2/black-friday/go-grpc-writer/: Dockerfile  go.mod  main.go
Proyecto2/black-friday/go-grpc-writer/pb/: producto_venta.pb.go
Proyecto2/black-friday/k8s/: 00-namespace.yaml  deploy-system.yaml  go-bridge.yaml  go-consumer.yaml  go-writer.yaml  hpa.yaml  rust-api.yaml  rust-deployment.yaml
Proyecto2/black-friday/k8s/infra/: kafka-cluster.yaml  valkey-deployment.yaml  valkey.yaml
Proyecto2/black-friday/proto/: product_sale.proto
Proyecto2/black-friday/rust-api/: Cargo.toml  Dockerfile  build.rs
Proyecto2/black-friday/rust-api/src/: main.rs
